adding scss variables

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,9 +5,13 @@ $primary: #006a76;
 $text-color: #f2f2f2;
 $error-text: #ff5050;
 
+$background: #1e1e20;
+$background-light: #2c2c2f;
+$background-dark: #131314;
+
 // font sizes
 $text-xs: 8px;
 $text-sm: 12px;
-$text-med: 16px;
+$text-med: 14px;
 $text-lg: 20px;
 $text-xl: 24px;
