--- a/src/App.scss
+++ b/src/App.scss
@@ -7,7 +7,7 @@
 
 .main-content {
   position: relative;
-  padding: 4rem 2rem;
+  padding: 4rem 2rem 0;
   display: flex;
   gap: 1rem;
   border: 1px solid grey;
