--- a/src/components/loan-display/loan-data/LoanData.scss
+++ b/src/components/loan-display/loan-data/LoanData.scss
@@ -3,4 +3,12 @@
 .loan-data {
     background-color: $background-light;
     border-radius: 1px;
+
+    &__chart {
+
+        display: flex;
+        justify-content: space-around;
+        width: 100%;
+        height: 50%;
+    }
 }
